# command_gateway

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
book/: book.toml
book/src/: introduction.md
proto/: internal.proto  interpreter.proto
src/: command.rs  lib.rs  session.rs
src/client/: client.rs  main.rs
src/common/: mod.rs
src/daemon/: main.rs  server.rs  sessions.rs
src/daemon/configuration/: mod.rs  whitelist.rs
src/interpreter/: client.rs  main.rs
