[package]
name = "command_gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "daemon"
path = "src/daemon/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
anyhow = "^1.0"
jsonrpc-derive = "18.0"