[package]
name = "command_gateway"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "daemon"
path = "src/daemon/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] } # Required for tonic
prost = "0.11" # Required for tonic
tonic = "0.8"

[build-dependencies]
tonic-build = { version = "0.8", features = ["prost"] } # Required for tonic