[package]
name = "command_gateway"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libcommand"
path = "src/lib.rs"

[[bin]]
name = "gtwyd"
path = "src/daemon/main.rs"

[[bin]]
name = "gtwy_interpreter"
path = "src/interpreter/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.7"
uuid = { version = "1.2.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] } # Required for tonic
tokio-stream = { version = "0.1", features = ["net"] } # Required for tonic with unix socket
tower = "0.4" # Required for tonic with unix socket
prost = "0.11" # Required for tonic
tonic = "0.8"
reqwest = "0.11.14"

[target.'cfg(windows)'.dependencies]
uds_windows = "1.0"

[build-dependencies]
tonic-build = { version = "0.8", features = ["prost"] } # Required for tonic